Fixed cargo.toml to make the tests and detector documentation

--- a/test-cases/delegate-call/delegate-call-1/vulnerable-example/divider/Cargo.toml
+++ b/test-cases/delegate-call/delegate-call-1/vulnerable-example/divider/Cargo.toml
@@ -32,3 +32,7 @@ overflow-checks = false
 [profile.dev]
 overflow-checks = false
 
+[workspace.metadata.dylint]
+libraries = [
+    { path = "/home/flerena/coinfabrik/web3grant/scout/detectors/delegate-call" },
+]
