--- a/test-cases/delegate-call/delegate-call-1/vulnerable-example/pay/Cargo.toml
+++ b/test-cases/delegate-call/delegate-call-1/vulnerable-example/pay/Cargo.toml
@@ -28,3 +28,8 @@ std = [
 ]
 ink-as-dependency = []
 e2e-tests = []
+
+[workspace.metadata.dylint]
+libraries = [
+    { path = "/home/flerena/coinfabrik/web3grant/scout/detectors/delegate-call" },
+]
