Updated file structure for CI

--- a/test-cases/delegate-call/delegate-call-1/vulnerable-example/Cargo.toml
+++ b/test-cases/delegate-call/delegate-call-1/vulnerable-example/Cargo.toml
@@ -9,7 +9,7 @@ ink = { version = "4.2.0", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
-divider = { path = "../divider", default-features = false, features = ["ink-as-dependency"] }
+divider = { path = "divider/", default-features = false, features = ["ink-as-dependency"] }
 
 
 
