--- a/test-cases/zero-or-test-address/zero-or-test-address-1/remediated-example/Cargo.toml
+++ b/test-cases/zero-or-test-address/zero-or-test-address-1/remediated-example/Cargo.toml
@@ -25,3 +25,8 @@ std = [
 ]
 ink-as-dependency = []
 e2e-tests = []
+
+# workspace.metadata.dylint]
+# libraries = [
+#      { path = "../../../../detectors/zero-or-test-address" },
+# ]
