--- a/test-cases/integer-overflow-or-underflow/integer-overflow-or-underflow-2/vulnerable-example/Cargo.toml
+++ b/test-cases/integer-overflow-or-underflow/integer-overflow-or-underflow-2/vulnerable-example/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "integer-overflow-or-underflow"
 version = "0.1.0"
-authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [lib]
@@ -15,15 +14,15 @@ std = [
     "scale-info/std",
 ]
 ink-as-dependency = []
+e2e-tests = []
 
 [dependencies]
-ink = { version = "4.0", default-features = false }
+ink = { version = "4.2.1", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 [dev-dependencies]
-ink_e2e = { version = "4.0" }
-
+ink_e2e = "4.2.1"
 
 [profile.dev]
 overflow-checks = false
