--- a/test-cases/dos-unbounded-operation/dos-unbounded-operation-1/remediated-example/Cargo.toml
+++ b/test-cases/dos-unbounded-operation/dos-unbounded-operation-1/remediated-example/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dos-unbounded-operation"
 version = "0.1.0"
 edition = "2021"
+authors = ["[your_name] <[your_email]>"]
 
 [lib]
 path = "lib.rs"
