--- a/test-cases/unused-return-enum/unused-return-enum-1/vulnerable-example/Cargo.toml
+++ b/test-cases/unused-return-enum/unused-return-enum-1/vulnerable-example/Cargo.toml
@@ -2,6 +2,7 @@
 name = "unused-return-enum"
 version = "0.1.0"
 edition = "2021"
+authors = ["[your_name] <[your_email]>"]
 
 [lib]
 path = "lib.rs"
