--- a/test-cases/unprotected-mapping-operation/unprotected-mapping-operation1/vulnerable-example/Cargo.toml
+++ b/test-cases/unprotected-mapping-operation/unprotected-mapping-operation1/vulnerable-example/Cargo.toml
@@ -24,3 +24,13 @@ std = [
 ]
 ink-as-dependency = []
 e2e-tests = []
+
+[workspace.metadata.dylint]
+libraries = [
+    { path = "../../../../detectors/unprotected-mapping-operation" },
+]
+
+
+
+
+
