--- a/test-cases/delegate-call/delegate-call-1/vulnerable-example/Cargo.toml
+++ b/test-cases/delegate-call/delegate-call-1/vulnerable-example/Cargo.toml
@@ -32,3 +32,9 @@ overflow-checks = false
 
 [profile.release]
 overflow-checks = false
+
+[workspace.metadata.dylint]
+libraries = [
+    { path = "../../../../detectors/lazy-delegate" }
+
+]
