--- a/test-cases/avoid-unsafe-block/vulnerable-example/Cargo.toml
+++ b/test-cases/avoid-unsafe-block/vulnerable-example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "assert_violation"
+name = "avoid-unsafe-block"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2021"
@@ -18,12 +18,12 @@ ink-as-dependency = []
 e2e-tests = []
 
 [dependencies]
-ink = { version = "4.2.1", default-features = false }
+ink = { version = "5", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
 [dev-dependencies]
-ink_e2e = "4.2.1"
+ink_e2e = "5"
 
 [profile.release]
 overflow-checks = false
