--- a/test-cases/avoid-unsafe-block/vulnerable-example/Cargo.toml
+++ b/test-cases/avoid-unsafe-block/vulnerable-example/Cargo.toml
@@ -30,3 +30,10 @@ overflow-checks = false
 
 [profile.dev]
 overflow-checks = false
+
+[workspace.metadata.dylint]
+libraries = [
+
+   { path = "/home/cami/Desktop/coinfabrik/scout/detectors/avoid-unsafe-block"},
+]
+
