--- a/test-cases/unstable-interface/unstable-interface-1/remediated-example/Cargo.toml
+++ b/test-cases/unstable-interface/unstable-interface-1/remediated-example/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["[your_name] <[your_email]>"]
 
 [lib]
-path = "lib.rs"
+path = "src/lib.rs"
 
 [features]
 default = ["std"]
