--- a/test-cases/vec-considerations/vec-considerations-1/vulnerable-example/Cargo.toml
+++ b/test-cases/vec-considerations/vec-considerations-1/vulnerable-example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vec_considerations"
+name = "vec_considerations-vulnerable"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2021"
@@ -18,13 +18,13 @@ ink-as-dependency = []
 e2e-tests = []
 
 [dependencies]
-ink = { version = "5", default-features = false }
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+ink = { workspace = true }
+scale = { workspace = true }
+scale-info = { workspace = true }
+
 
 [dev-dependencies]
-ink_e2e = "5"
-
+ink_e2e = { workspace = true }
 [profile.release]
 overflow-checks = false
 
