--- a/test-cases/non-payable-transferred-value/non-payable-transferred-value-1/vulnerable-example/Cargo.toml
+++ b/test-cases/non-payable-transferred-value/non-payable-transferred-value-1/vulnerable-example/Cargo.toml
@@ -17,14 +17,14 @@ std = [
 ink-as-dependency = []
 e2e-tests = []
 
+
 [dependencies]
-ink = { version = "5.0.0", default-features = false }
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+ink = { workspace = true }
+scale = { workspace = true }
+scale-info = { workspace = true }
 
 [dev-dependencies]
-ink_e2e = "5.0.0"
-
+ink_e2e = { workspace = true }
 [profile.dev]
 overflow-checks = false
 
