--- a/test-cases/lazy-values-not-set/lazy-values-not-set-1/vulnerable-example/Cargo.toml
+++ b/test-cases/lazy-values-not-set/lazy-values-not-set-1/vulnerable-example/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["[your_name] <[your_email]>"]
 
 [lib]
-path = "lib.rs"
+path = "src/lib.rs"
 
 [features]
 default = ["std"]
